kubernetes/colorapp/colorapp-blue.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: blue-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-blue
  namespace: blue-app
spec:
  selector:
    matchLabels:
      app: blue
  replicas: 2
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
      - name: webapp
        image: robokingmaster/examples:colorapp
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-blue
  namespace: blue-app
spec:
  selector:
    app: blue
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort
