kubernetes/colorapp/colorapp-allinone.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: multi-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-blue
  namespace: multi-app
spec:
  selector:
    matchLabels:
      app: blue
  replicas: 2
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
      - name: webapp
        image: robokingmaster/examples:colorapp
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-blue
  namespace: multi-app
spec:
  selector:
    app: blue
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-green
  namespace: multi-app
spec:
  selector:
    matchLabels:
      app: green
  replicas: 2
  template:
    metadata:
      labels:
        app: green
    spec:
      containers:
      - name: webapp
        image: robokingmaster/examples:colorapp
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-green
  namespace: multi-app
spec:
  selector:
    app: green
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-red
  namespace: multi-app
spec:
  selector:
    matchLabels:
      app: red
  replicas: 2
  template:
    metadata:
      labels:
        app: red
    spec:
      containers:
      - name: webapp
        image: robokingmaster/examples:colorapp
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-red
  namespace: multi-app
spec:
  selector:
    app: red
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort
       
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  namespace: multi-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:  
  rules:
    - http:
        paths:
          - path: /red
            pathType: Prefix
            backend:
              service:
                name: service-red
                port:
                  number: 80
          - path: /blue
            pathType: Prefix
            backend:
              service:
                name: service-blue
                port:
                  number: 80
          - path: /green
            pathType: Prefix
            backend:
              service:
                name: service-green
                port:
                  number: 80
