kubernetes/colorapp/colorapp-green-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-green
  namespace: green-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:  
  rules:
    - http:
        paths:
        - path: /green
          pathType: Prefix
          backend:
            service:
              name: service-green
              port:
                number: 80
